libs/notcurses/src/System/Notcurses.idr

||| Bindings to [notcurses](https://notcurses.com/)' `notcurses-core`
||| API (multimedia excluded -- no ffmpeg dependency). Functions
||| notcurses.h marks `API` (always a real, body-less symbol) bind
||| straight onto `libnotcurses-core` by name; everything else --
||| struct-by-pointer construction, `ncinput`-field caching, and every
||| function that only exists as a `static inline` body in notcurses'
||| own header -- goes through this package's own shim
||| (`support/c/nc_util.c`), the only translation unit that ever
||| touches the real `<notcurses/notcurses.h>` (no `libnotcurses-ffi`
||| dependency needed as a result). See `doc/notcurses.md` for the full
||| rationale and for what this package deliberately does not cover
||| (multimedia, plots, widgets, direct mode, the raw channel/cell
||| API, ...). `examples/` has runnable, manually-verifiable programs
||| covering everything below -- automated tests can only cover
||| build+link+`notcurses_version()`, since a real init needs a real
||| terminal.
module System.Notcurses

-- Copyright 2026, Hattori,Hiroki. All rights reserved.
-- This module was licensed by BSD3.

import System.FFI

-------------------------------------------------------------------------------
-- Raw FFI
-------------------------------------------------------------------------------

data RawNotcurses : Type where [external]
data RawNCPlane : Type where [external]

%foreign "C:idris2_isNull, libidris2_support, idris_support.h"
prim__isNull : AnyPtr -> PrimIO Int

-- idris2rc2notcurses (this package's own shim; struct-by-pointer
-- construction and ncinput-field caching -- see nc_util.h)

%foreign "C:idris2rc2_nc_init, libidris2rc2notcurses, nc_util.h"
prim__ncInit : Int -> Bits32 -> Bits32 -> Bits32 -> Bits32 -> PrimIO AnyPtr

%foreign "C:idris2rc2_ncplane_create, libidris2rc2notcurses, nc_util.h"
prim__ncplaneCreate : Ptr RawNCPlane -> Int -> Int -> Bits32 -> Bits32 -> String -> PrimIO AnyPtr

%foreign "C:idris2rc2_nc_get_blocking, libidris2rc2notcurses, nc_util.h"
prim__ncGetBlocking : Ptr RawNotcurses -> PrimIO Bits32
%foreign "C:idris2rc2_nc_get_nonblock, libidris2rc2notcurses, nc_util.h"
prim__ncGetNonblock : Ptr RawNotcurses -> PrimIO Bits32
%foreign "C:idris2rc2_nc_last_input_y, libidris2rc2notcurses, nc_util.h"
prim__ncLastInputY : PrimIO Int
%foreign "C:idris2rc2_nc_last_input_x, libidris2rc2notcurses, nc_util.h"
prim__ncLastInputX : PrimIO Int
%foreign "C:idris2rc2_nc_last_input_modifiers, libidris2rc2notcurses, nc_util.h"
prim__ncLastInputModifiers : PrimIO Bits32
%foreign "C:idris2rc2_nc_last_input_evtype, libidris2rc2notcurses, nc_util.h"
prim__ncLastInputEvtype : PrimIO Int
%foreign "C:idris2rc2_nc_last_input_utf8, libidris2rc2notcurses, nc_util.h"
prim__ncLastInputUtf8 : PrimIO String

%foreign "C:idris2rc2_nckey_invalid, libidris2rc2notcurses, nc_util.h"
prim__nckeyInvalid : Bits32
%foreign "C:idris2rc2_nckey_resize, libidris2rc2notcurses, nc_util.h"
prim__nckeyResize : Bits32
%foreign "C:idris2rc2_nckey_up, libidris2rc2notcurses, nc_util.h"
prim__nckeyUp : Bits32
%foreign "C:idris2rc2_nckey_down, libidris2rc2notcurses, nc_util.h"
prim__nckeyDown : Bits32
%foreign "C:idris2rc2_nckey_left, libidris2rc2notcurses, nc_util.h"
prim__nckeyLeft : Bits32
%foreign "C:idris2rc2_nckey_right, libidris2rc2notcurses, nc_util.h"
prim__nckeyRight : Bits32
%foreign "C:idris2rc2_nckey_ins, libidris2rc2notcurses, nc_util.h"
prim__nckeyIns : Bits32
%foreign "C:idris2rc2_nckey_del, libidris2rc2notcurses, nc_util.h"
prim__nckeyDel : Bits32
%foreign "C:idris2rc2_nckey_backspace, libidris2rc2notcurses, nc_util.h"
prim__nckeyBackspace : Bits32
%foreign "C:idris2rc2_nckey_pgup, libidris2rc2notcurses, nc_util.h"
prim__nckeyPgup : Bits32
%foreign "C:idris2rc2_nckey_pgdown, libidris2rc2notcurses, nc_util.h"
prim__nckeyPgdown : Bits32
%foreign "C:idris2rc2_nckey_home, libidris2rc2notcurses, nc_util.h"
prim__nckeyHome : Bits32
%foreign "C:idris2rc2_nckey_end, libidris2rc2notcurses, nc_util.h"
prim__nckeyEnd : Bits32
%foreign "C:idris2rc2_nckey_enter, libidris2rc2notcurses, nc_util.h"
prim__nckeyEnter : Bits32
%foreign "C:idris2rc2_nckey_f01, libidris2rc2notcurses, nc_util.h"
prim__nckeyF01 : Bits32
%foreign "C:idris2rc2_nckey_f02, libidris2rc2notcurses, nc_util.h"
prim__nckeyF02 : Bits32
%foreign "C:idris2rc2_nckey_f03, libidris2rc2notcurses, nc_util.h"
prim__nckeyF03 : Bits32
%foreign "C:idris2rc2_nckey_f04, libidris2rc2notcurses, nc_util.h"
prim__nckeyF04 : Bits32

-- libnotcurses-core (always-real, `API`-attributed symbols)

%foreign "C:notcurses_version, libnotcurses-core, nc_util.h"
prim__ncVersion : PrimIO String
%foreign "C:notcurses_stop, libnotcurses-core, nc_util.h"
prim__ncStop : Ptr RawNotcurses -> PrimIO Int
%foreign "C:ncplane_destroy, libnotcurses-core, nc_util.h"
prim__ncplaneDestroy : Ptr RawNCPlane -> PrimIO Int
%foreign "C:notcurses_stdplane, libnotcurses-core, nc_util.h"
prim__ncStdplane : Ptr RawNotcurses -> PrimIO AnyPtr
%foreign "C:ncplane_move_yx, libnotcurses-core, nc_util.h"
prim__ncplaneMoveYx : Ptr RawNCPlane -> Int -> Int -> PrimIO Int
%foreign "C:ncplane_cursor_move_yx, libnotcurses-core, nc_util.h"
prim__ncplaneCursorMoveYx : Ptr RawNCPlane -> Int -> Int -> PrimIO Int
%foreign "C:ncplane_erase, libnotcurses-core, nc_util.h"
prim__ncplaneErase : Ptr RawNCPlane -> PrimIO ()
%foreign "C:ncplane_set_fg_rgb8, libnotcurses-core, nc_util.h"
prim__ncplaneSetFgRgb8 : Ptr RawNCPlane -> Bits32 -> Bits32 -> Bits32 -> PrimIO Int
%foreign "C:ncplane_set_bg_rgb8, libnotcurses-core, nc_util.h"
prim__ncplaneSetBgRgb8 : Ptr RawNCPlane -> Bits32 -> Bits32 -> Bits32 -> PrimIO Int
%foreign "C:ncplane_set_fg_default, libnotcurses-core, nc_util.h"
prim__ncplaneSetFgDefault : Ptr RawNCPlane -> PrimIO ()
%foreign "C:ncplane_set_bg_default, libnotcurses-core, nc_util.h"
prim__ncplaneSetBgDefault : Ptr RawNCPlane -> PrimIO ()
%foreign "C:ncplane_set_fg_alpha, libnotcurses-core, nc_util.h"
prim__ncplaneSetFgAlpha : Ptr RawNCPlane -> Int -> PrimIO Int
%foreign "C:ncplane_set_bg_alpha, libnotcurses-core, nc_util.h"
prim__ncplaneSetBgAlpha : Ptr RawNCPlane -> Int -> PrimIO Int
%foreign "C:ncplane_set_styles, libnotcurses-core, nc_util.h"
prim__ncplaneSetStyles : Ptr RawNCPlane -> Bits32 -> PrimIO ()

-- Functions that only exist as `static inline` bodies in notcurses'
-- own header (previously bound against its separate "-ffi" build
-- variant) -- now wrapped by this package's own shim instead, which
-- confines the real header to nc_util.c alone and drops the
-- libnotcurses-ffi dependency entirely. See doc/notcurses.md.

%foreign "C:idris2rc2_nc_render, libidris2rc2notcurses, nc_util.h"
prim__ncRender : Ptr RawNotcurses -> PrimIO Int
%foreign "C:idris2rc2_ncplane_putstr, libidris2rc2notcurses, nc_util.h"
prim__ncplanePutstr : Ptr RawNCPlane -> String -> PrimIO Int
%foreign "C:idris2rc2_ncplane_putstr_yx, libidris2rc2notcurses, nc_util.h"
prim__ncplanePutstrYx : Ptr RawNCPlane -> Int -> Int -> String -> PrimIO Int
%foreign "C:idris2rc2_ncplane_resize_simple, libidris2rc2notcurses, nc_util.h"
prim__ncplaneResizeSimple : Ptr RawNCPlane -> Bits32 -> Bits32 -> PrimIO Int
%foreign "C:idris2rc2_ncplane_dim_y, libidris2rc2notcurses, nc_util.h"
prim__ncplaneDimY : Ptr RawNCPlane -> PrimIO Bits32
%foreign "C:idris2rc2_ncplane_dim_x, libidris2rc2notcurses, nc_util.h"
prim__ncplaneDimX : Ptr RawNCPlane -> PrimIO Bits32
%foreign "C:idris2rc2_ncplane_cursor_y, libidris2rc2notcurses, nc_util.h"
prim__ncplaneCursorY : Ptr RawNCPlane -> PrimIO Bits32
%foreign "C:idris2rc2_ncplane_cursor_x, libidris2rc2notcurses, nc_util.h"
prim__ncplaneCursorX : Ptr RawNCPlane -> PrimIO Bits32
%foreign "C:idris2rc2_ncplane_perimeter_rounded, libidris2rc2notcurses, nc_util.h"
prim__ncplanePerimeterRounded : Ptr RawNCPlane -> Bits16 -> Bits64 -> Bits32 -> PrimIO Int
%foreign "C:idris2rc2_ncplane_perimeter_double, libidris2rc2notcurses, nc_util.h"
prim__ncplanePerimeterDouble : Ptr RawNCPlane -> Bits16 -> Bits64 -> Bits32 -> PrimIO Int

-------------------------------------------------------------------------------
-- Constants
-------------------------------------------------------------------------------

||| Log verbosity for `init`. `Silent` is notcurses' own default (nothing
||| printed to stderr once fullscreen service begins).
public export
data LogLevel = Silent | Panic | Fatal | Error | Warning | Info | Verbose | Debug | Trace

logLevelCode : LogLevel -> Int
logLevelCode Silent = -1
logLevelCode Panic = 0
logLevelCode Fatal = 1
logLevelCode Error = 2
logLevelCode Warning = 3
logLevelCode Info = 4
logLevelCode Verbose = 5
logLevelCode Debug = 6
logLevelCode Trace = 7

namespace NCStyle
  ||| Bits for `setStyles`, notcurses.h's `NCSTYLE_*`. Plain small
  ||| integers (unlike the `NCKEY.*` codes below), stable to hardcode.
  public export
  none, struck, undercurl, underline, italic, bold, mask : Bits32
  none      = 0x0000
  struck    = 0x0001
  underline = 0x0008
  undercurl = 0x0004
  bold      = 0x0002
  italic    = 0x0010
  mask      = 0xffff

namespace NCKeyMod
  ||| Bits for `NCInput.modifiers`, notcurses.h's `NCKEY_MOD_*`. Plain
  ||| small integers, stable to hardcode.
  public export
  shift, alt, ctrl, super, hyper, meta, capslock, numlock : Bits32
  shift    = 1
  alt      = 2
  ctrl     = 4
  super    = 8
  hyper    = 16
  meta     = 32
  capslock = 64
  numlock  = 128

||| Whether an `NCInput` event was a press, a held-key repeat, or a
||| release (`notcurses.h`'s `ncintype_e`; `Unknown` when the terminal
||| protocol in use can't distinguish, e.g. legacy non-Kitty input).
public export
data NCEventType = UnknownEvent | Press | Repeat | Release

ncEventTypeFromCode : Int -> NCEventType
ncEventTypeFromCode 1 = Press
ncEventTypeFromCode 2 = Repeat
ncEventTypeFromCode 3 = Release
ncEventTypeFromCode _ = UnknownEvent

namespace NCKey
  ||| `NCKEY_TAB`/`NCKEY_ESC`: plain ASCII control codes in notcurses.h
  ||| (`0x09`/`0x1b`), not `preterunicode`-derived -- safe to hardcode,
  ||| unlike the rest of this namespace (backed by shim getters; see
  ||| nc_util.h's own comment on why).
  public export
  tab, esc : Bits32
  tab = 0x09
  esc = 0x1b

  export invalid : Bits32
  invalid = prim__nckeyInvalid
  export resize : Bits32
  resize = prim__nckeyResize
  export up : Bits32
  up = prim__nckeyUp
  export down : Bits32
  down = prim__nckeyDown
  export left : Bits32
  left = prim__nckeyLeft
  export right : Bits32
  right = prim__nckeyRight
  export ins : Bits32
  ins = prim__nckeyIns
  export del : Bits32
  del = prim__nckeyDel
  export backspace : Bits32
  backspace = prim__nckeyBackspace
  export pgup : Bits32
  pgup = prim__nckeyPgup
  export pgdown : Bits32
  pgdown = prim__nckeyPgdown
  export home : Bits32
  home = prim__nckeyHome
  export end : Bits32
  end = prim__nckeyEnd
  export enter : Bits32
  enter = prim__nckeyEnter
  export f01 : Bits32
  f01 = prim__nckeyF01
  export f02 : Bits32
  f02 = prim__nckeyF02
  export f03 : Bits32
  f03 = prim__nckeyF03
  export f04 : Bits32
  f04 = prim__nckeyF04

-------------------------------------------------------------------------------
-- Lifecycle
-------------------------------------------------------------------------------

||| A live notcurses context. Exactly one per process -- notcurses
||| itself doesn't support more. Not GC-managed (unlike e.g.
||| `Text.Regex.RE2`'s `Regex`): `stop` restores the terminal
||| (alternate screen, cursor, echo, ...) and must run at a
||| deterministic point, not whenever the GC happens to collect it --
||| always pair `init` with `stop`, including on every error/exit path.
export
record Notcurses where
  constructor MkNotcurses
  ptr : Ptr RawNotcurses
